--- a/node-config/nodes-ec2.yml
+++ b/node-config/nodes-ec2.yml
@@ -7,7 +7,7 @@ nodes:
     instance_type: t2.medium
     #image: ami-85241def #rhel7
     #image: ami-61bbf104 #centos7
-    image: ami-02eac2c0129f6376b #updated centos7 image
+    image: "{{ ec2_ami_ids['centos7'] | default('ami-02eac2c0129f6376b') }}" #updated centos7 image
     volumes:
       - device_name: /dev/sda1
         ebs:
