--- a/jenkins_ec2_domain.yml
+++ b/jenkins_ec2_domain.yml
@@ -3,7 +3,7 @@
   tasks:
 
     - name: get ec2 instance information
-      ec2_instance_facts:
+      ec2_instance_info:
         region: "{{ ec2_region }}"
         filters:
           vpc-id: "{{ ec2_vpc_id }}"
