--- a/roles/jenkins-configure/defaults/main.yml
+++ b/roles/jenkins-configure/defaults/main.yml
@@ -3,8 +3,11 @@
 jenkins2_home_directory: /var/lib/jenkins
 jenkins2_user: jenkins
 jenkins2_config_http_port: 8080
-jenkins2_cli_username: admin
-jenkins2_cli_password: admin
+
+jenkins_admin_username: admin
+jenkins_admin_password: admin
+jenkins2_cli_username: "{{ jenkins_admin_username }}"
+jenkins2_cli_password: "{{ jenkins_admin_password }}"
 
 tower_job_template_name: bb-u1-win-mssql-vmware-ci/cd
 
