--- a/roles/lean_delivery.jenkins/handlers/main.yml
+++ b/roles/lean_delivery.jenkins/handlers/main.yml
@@ -15,13 +15,23 @@
   notify: Wait for Jenkins
   become: true
 
+- name: Configure default users
+  template:
+    src: basic-security.groovy.j2
+    dest: "{{ jenkins2_home_directory }}/init.groovy.d/basic-security.groovy"
+    owner: "{{ jenkins2_process_user }}"
+    group: "{{ jenkins2_process_group }}"
+    mode: 0775
+  register: jenkins_users_config
+
 - name: Wait for Jenkins
   uri:
     url: "{{ jenkins2_config_proto }}://{{ jenkins2_host_address }}:\
       {{ jenkins2_config_http_port }}{{ jenkins2_context_path | default('') }}/login"
-    status_code: 200
+    status_code:
+      - 200
   register: login_page
-  until: login_page.status == 200
+  until: login_page is success
   retries: 60
   delay: 5
 
