--- a/roles/lean_delivery.jenkins/tasks/main.yml
+++ b/roles/lean_delivery.jenkins/tasks/main.yml
@@ -10,7 +10,6 @@
   loop_control:
     loop_var: os_distribution_type
 
-
 - name: Choose platform based task
   include_tasks: '{{ platform }}'
   with_first_found:
@@ -98,6 +97,8 @@
   register: jenkins_was_installed
   until: jenkins_was_installed is succeeded
   become: true
+  notify:
+    - Configure default users
 
 - name: Apply Jenkins configuration file
   template:
@@ -121,6 +122,17 @@
   when:
     - jenkins_was_installed is defined
     - jenkins_was_installed.changed | bool
+
+- name: Create custom init scripts directory.
+  file:
+    path: "{{ jenkins2_home_directory }}/init.groovy.d"
+    state: directory
+    owner: "{{ jenkins2_process_user }}"
+    group: "{{ jenkins2_process_group }}"
+    mode: 0775
+
+- name: Trigger handlers immediately in case Jenkins was installed
+  meta: flush_handlers
 
 - include_tasks: install_plugins.yml
   when: jenkins_was_installed is defined | bool
