--- a/roles/lean_delivery.jenkins/vars/Debian.yml
+++ b/roles/lean_delivery.jenkins/vars/Debian.yml
@@ -1,5 +1,6 @@
 ---
 jenkins_config_service_path: /etc/default/jenkins
+jenkins_systemd_unit_file: /usr/lib/systemd/system/jenkins.service
 jenkins_python_dev_package: >-
   {{ (ansible_facts.python.version.major|int ==3 ) | ternary('python3-dev', 'python-dev') }}
 jenkins_python_pip_package: >-
