--- a/jenkins_remove_ec2.yml
+++ b/jenkins_remove_ec2.yml
@@ -1,23 +1,9 @@
-- hosts: localhost
-  become: no
+- name: remove route53
+  hosts: localhost
+  become: false
   tasks:
-    - name: get ec2 instance information
-      ec2_instance_info:
-        region: "{{ ec2_region }}"
-        filters:
-          vpc-id: "{{ ec2_vpc_id }}"
-          "tag:app": jenkins_tower_demo
-      register: ec2_instances
-
-    - name: terminate instances
-      ec2_instance:
-        region: "{{ ec2_region }}"
-        state: absent
-        instance_ids: "{{ ec2_instances.instances | map(attribute='instance_id') | list }}"
-      when: ec2_instances.instances | length > 0
-
-    - name: Get record for router ELB DNS Entry
-      route53:
+    - name: get record for router ELB DNS Entry
+      community.aws.route53:
         command: get
         zone: "{{ hosted_zone_domain_name }}"
         record: "{{ subdomain | default(ec2_instances.instances[0].tags.role | lower) | default('jenkins') }}.{{ ec2_name_prefix | lower }}.{{ hosted_zone_domain_name }}"
@@ -25,12 +11,30 @@
       register: routerelbrec
       when: hosted_zone_domain_name is defined and ec2_name_prefix is defined
 
-    - name: Delete Router ELB DNS Entry if it doesn't exist
-      route53:
-        #state: present ## Added in Ansible 2.4 will remove need for when statement below
-        command: delete
+    - name: delete Router ELB DNS Entry if it doesn't exist
+      community.aws.route53:
+        state: absent
         zone: "{{ hosted_zone_domain_name }}"
         record: "{{ subdomain | default(ec2_instances.instances[0].tags.role | lower) | default('jenkins') }}.{{ ec2_name_prefix | lower }}.{{ hosted_zone_domain_name }}"
         type: A
-        value: "{{ ec2_instances.instances[0].public_ip_address }}"
-      when: routerelbrec.set is defined and "{} != routerelbrec.set"
+        value: "{{ routerelbrec.set.value }}"
+        alias: True
+        alias_hosted_zone_id: "{{ routerelbrec.set.alias_hosted_zone_id }}"
+      when: routerelbrec.set is defined and "{} != routerelbrec.set" and routerelbrec.set.alias_hosted_zone_id is defined
+
+
+- name: remove Jenkins instances
+  hosts: all
+  gather_facts: False
+  connection: local
+  vars:
+    ansible_ssh_password: ''
+  become: no
+  vars_files:
+    - node-config/nodes-ec2.yml
+
+  roles:
+    - role: ansible-role-ec2
+      role_action: deprovision
+      delegate_to: localhost
+      run_once: yes
