update jenkins_ec2_domain.yml with collection names

--- a/jenkins_remove_ec2.yml
+++ b/jenkins_remove_ec2.yml
@@ -2,7 +2,7 @@
   hosts: localhost
   become: false
   tasks:
-    - name: get record for router ELB DNS Entry
+    - name: get record for router DNS entry
       community.aws.route53:
         command: get
         zone: "{{ hosted_zone_domain_name }}"
@@ -11,7 +11,7 @@
       register: routerelbrec
       when: hosted_zone_domain_name is defined and ec2_name_prefix is defined
 
-    - name: delete Router ELB DNS Entry if it doesn't exist
+    - name: delete DNS entry if it doesn't exist
       community.aws.route53:
         state: absent
         zone: "{{ hosted_zone_domain_name }}"
@@ -25,7 +25,7 @@
 
 - name: remove Jenkins instances
   hosts: all
-  gather_facts: False
+  gather_facts: false
   connection: local
   vars:
     ansible_ssh_password: ''
