--- a/jenkins_ec2_domain.yml
+++ b/jenkins_ec2_domain.yml
@@ -1,34 +1,27 @@
 - hosts: localhost
-  become: no
+  become: false
   tasks:
-
     - name: get ec2 instance information
-      ec2_instance_info:
+      amazon.aws.ec2_instance_info:
         region: "{{ ec2_region }}"
         filters:
           vpc-id: "{{ ec2_vpc_id }}"
           "tag:app": jenkins_tower_demo
       register: ec2_instances
 
-    - name: Get record for router ELB DNS Entry
-      route53:
-        command: get
-        zone: "{{ hosted_zone_domain_name }}"
-        record: "{{ subdomain | default(ec2_instances.instances[0].tags.role | lower) }}.{{ ec2_name_prefix | lower }}.{{ hosted_zone_domain_name }}"
-        type: A
-      register: routerelbrec
-      when: hosted_zone_domain_name is defined and ec2_name_prefix is defined
-
-    - name: Create Router ELB DNS Entry if it doesn't exist
-      route53:
-        #state: present ## Added in Ansible 2.4 will remove need for when statement below
-        command: create
+    - name: create DNS entry if it doesn't exist
+      community.aws.route53:
+        state: present
         overwrite: yes
         zone: "{{ hosted_zone_domain_name }}"
         record: "{{ subdomain | default(ec2_instances.instances[0].tags.role | lower) }}.{{ ec2_name_prefix | lower }}.{{ hosted_zone_domain_name }}"
         type: A
         value: "{{ ec2_instances.instances[0].public_ip_address }}"
-      when: routerelbrec.set is defined and "{} == routerelbrec.set"
+        wait: true
+      when:
+        - ec2_instances.instances is defined
+        - ec2_instances.instances | length > 0
+        - ec2_instances.instances[0].public_ip_address
 
     - name: output url
       debug:
