--- a/jenkins_remove_ec2.yml
+++ b/jenkins_remove_ec2.yml
@@ -9,6 +9,15 @@
     - node-config/nodes-ec2.yml
 
   pre_tasks:
+    - name: get ec2 instance information
+      amazon.aws.ec2_instance_info:
+        region: "{{ ec2_region }}"
+        filters:
+          vpc-id: "{{ ec2_vpc_id }}"
+          "tag:app": jenkins_tower_demo
+      register: ec2_instances
+      delegate_to: localhost
+
     - name: get record for router DNS entry
       community.aws.route53:
         command: get
