--- a/jenkins_remove_ec2.yml
+++ b/jenkins_remove_ec2.yml
@@ -28,16 +28,14 @@
       when: hosted_zone_domain_name is defined and ec2_name_prefix is defined
       delegate_to: localhost
 
-    - name: delete DNS entry if it doesn't exist
+    - name: delete DNS entry if it exists
       community.aws.route53:
         state: absent
         zone: "{{ hosted_zone_domain_name }}"
         record: "{{ subdomain | default(ec2_instances.instances[0].tags.role | lower) | default('jenkins') }}.{{ ec2_name_prefix | lower }}.{{ hosted_zone_domain_name }}"
         type: A
         value: "{{ routerelbrec.set.value }}"
-        alias: True
-        alias_hosted_zone_id: "{{ routerelbrec.set.alias_hosted_zone_id }}"
-      when: routerelbrec.set is defined and "{} != routerelbrec.set" and routerelbrec.set.alias_hosted_zone_id is defined
+      when: routerelbrec.set is defined and "{} != routerelbrec.set" and routerelbrec.set.record is defined
       delegate_to: localhost
   roles:
     - role: ansible-role-ec2
