--- a/roles/ec2-find-amis/defaults/main.yml
+++ b/roles/ec2-find-amis/defaults/main.yml
@@ -2,7 +2,8 @@
 
 ec2_image_names:
   rhel7: "RHEL-7.8_HVM_GA*x86_64*"
-  rhel8: "RHEL-8.5.0_HVM*x86_64*"
+  rhel8: "RHEL-8.6.0_HVM*x86_64*"
+  rhel9: "RHEL-9.0.0_HVM*x86_64*"
   centos7: "CentOS Linux 7 x86_64 HVM EBS ENA 1901_01*"
-  centos8: "CentOS 8.2.2004 x86_64"
+  centos8: "CentOS 8.4*x86_64"
 ec2_region: us-east-1
