--- a/roles/ec2-find-amis/tasks/main.yml
+++ b/roles/ec2-find-amis/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: find ami id for rhel 7
-  ec2_ami_info:
+  amazon.aws.ec2_ami_info:
     owners: 309956199498
     filters:
       name: "{{ ec2_image_names['rhel7'] }}"
@@ -9,15 +9,23 @@
   register: rhel7_ami_find
 
 - name: find ami id for rhel 8
-  ec2_ami_info:
+  amazon.aws.ec2_ami_info:
     owners: 309956199498
     filters:
       name: "{{ ec2_image_names['rhel8'] }}"
     region: "{{ ec2_region }}"
   register: rhel8_ami_find
 
+- name: find ami id for rhel 9
+  amazon.aws.ec2_ami_info:
+    owners: 309956199498
+    filters:
+      name: "{{ ec2_image_names['rhel9'] }}"
+    region: "{{ ec2_region }}"
+  register: rhel9_ami_find
+
 - name: find ami id for centos 7
-  ec2_ami_info:
+  amazon.aws.ec2_ami_info:
     owners: aws-marketplace
     filters:
       name: "{{ ec2_image_names['centos7'] }}"
@@ -25,7 +33,7 @@
   register: centos7_ami_find
 
 - name: find ami id for centos 8
-  ec2_ami_info:
+  amazon.aws.ec2_ami_info:
     owners: 125523088429
     filters:
       name: "{{ ec2_image_names['centos8'] }}"
@@ -37,6 +45,7 @@
     ec2_ami_ids:
       rhel7: "{{ rhel7_ami_find.images[-1].image_id | default('') }}"
       rhel8: "{{ rhel8_ami_find.images[-1].image_id | default('') }}"
+      rhel9: "{{ rhel9_ami_find.images[-1].image_id | default('') }}"
       centos7: "{{ centos7_ami_find.images[-1].image_id | default('') }}"
       centos8: "{{ centos8_ami_find.images[-1].image_id | default('') }}"
 
