--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -15,6 +15,15 @@
 - src: https://github.com/oatakan/ansible-role-kubevirt.git
   version: origin/master
 
+- src: https://github.com/oatakan/ansible-role-ovirt
+  version: origin/master
+
+- src: https://github.com/oatakan/ansible-role-openstack
+  version: origin/master
+
+- src: https://github.com/oatakan/ansible-role-os-stack
+  version: origin/master
+
 - src: https://github.com/oatakan/ansible-role-openshift-add-auth-config.git
   version: origin/master
   name: oatakan.openshift-add-auth-config
