--- a/node-config/nodes-kubevirt.yml
+++ b/node-config/nodes-kubevirt.yml
@@ -10,5 +10,5 @@ nodes:
     memory: 8192
     cpu: 2
     user_name: root
-    root_password: '{{ ansible_password | default(ansible_ssh_password) | default("password") | b64encode | b64decode }}'
-    template: "{{ infra_template_name | default('centos83-x64-v1') }}"
+    root_password: '{{ ansible_password | default(ansible_ssh_password) | default("password") }}'
+    template: "{{ infra_template_name | default('rocky91-x64-v1') }}"
