--- a/node-config/nodes-ovirt.yml
+++ b/node-config/nodes-ovirt.yml
@@ -14,4 +14,4 @@ nodes:
     cpu: 2
     user_name: root
     root_password: '{{ ansible_password | default(ansible_ssh_password) | default("password") }}'
-    template: "{{ infra_template_name|default('rocky91-x64-v1') }}"
+    template: "{{ infra_template_name|default('rhel93-x64-v1') }}"
