--- a/provision_jenkins.yml
+++ b/provision_jenkins.yml
@@ -17,7 +17,15 @@
     github_external_url: https://api.github.com
     github_manage_hooks: False
     jenkins2_github_token_cred: github_token
-  pre_tasks:
+  tasks:
+    - name: test existing Jenkins with HTTP
+      ansible.builtin.uri:
+        url: "http://{{ ansible_default_ipv4.address }}:\
+          {{ jenkins2_config_http_port }}{{ jenkins2_context_path | default('') }}/login"
+        status_code: 200
+        validate_certs: false
+      failed_when: false
+
     - name: import epel gpg key
       rpm_key:
         state: present
